# hs-gql-elm-example

./: .gitignore  Commands.hs  Flows.hs  Main.hs  Projections.hs  README.md  Resolvers.hs  Schema.hs  graphql-example.cabal
public/: build.sh  elm.json  index.html  schema.graphql
public/src/: Main.elm
public/src/Data/: Api.elm  Decode.elm
