cabal-version:       >=1.10
name:                graphql-example
version:             0.1.0.0
author:              Niels Bergsma
maintainer:          n.bergsma@gmail.com
build-type:          Simple


executable graphql-example
  main-is:             Main.hs
  other-modules:       Schema
                     , Resolvers
                     , Projections
                     , Commands
                     , Flows
  
  -- ghc-options:         -Wall

  build-depends:       base >=4.13 && <4.14
                     , morpheus-graphql
                     , text
                     , text-icu
                     , bytestring
                     , http-types
                     , warp
                     , wai
                     , wai-extra
                     , wai-app-static
                     , aeson
                     , vector
                     , hasql
                     , hasql-th >= 0.4 && <0.5
                     , parsec

  -- hs-source-dirs:
  default-language:    Haskell2010
